fix footer readability

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -20,6 +20,10 @@ html.layout-box {
   background-color: #19171ee0;
 }
 
+.layout-box .bg-transparent {
+  background-color: rgba(25, 23, 30, 0.99);
+}
+
 .bg-solid {
   background-color: #19171e;
 }
@@ -29,7 +33,15 @@ html.layout-box {
   flex-direction: row;
   padding: .25rem .5rem;
   font-size: .75rem;
-  text-shadow: .015rem .015rem .1rem black;
+  background-color: rgba(25, 23, 30, 0.56);
+}
+
+.layout-box .footer {
+  background-color: #19171ee0;
+}
+
+.layout-box .credits {
+  font-size: .8rem;
 }
 
 .footer .timespan {
@@ -45,7 +57,6 @@ html.layout-box {
 .credits img {
   height: 1rem;
   vertical-align: middle;
-  filter: drop-shadow(.015rem .015rem .1rem black);
 }
 
 .metric-wrapper > .vcontainer {
